Fix text field style on iOS

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -6,6 +6,7 @@ textarea
 {
 	margin: 0;
 	border: 0;
+	border-radius: 0;
 	padding: 0;
 	display: inline-block;
 	vertical-align: middle;
